@@ -4,6 +4,8 @@ Date: 2021-05-12
   Bugfixes:
     - Crash on double confirm.
     - Crash when loading game with UI already open in save.
+    - Don't remove icon from netid if the sprite is invalid.   Just ignore it.  It may be a
+      temporarily missing mod.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2021-04-25
